<resources>
    <string name="app_name">Android_calculator_project</string>
    <string name="division">/</string>
    <string name="perсent">%</string>
    <string name="clear">C</string>
    <string name="delete">⌫</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiplication">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="_0">0</string>
    <string name="point">,</string>
    <string name="equal">=</string>
    <string name="settings">Settings</string>
    <string name="Сurrently_in_use">Сurrently in use :</string>
</resources>