<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon"
    tools:context=".MainActivity">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_memory"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_size_output"
        android:gravity="bottom|end"
        android:textColor="@color/special_min"
        android:textSize="@dimen/text_size_memory"
        app:layout_constraintBottom_toTopOf="@id/text_present"
        app:layout_constraintEnd_toEndOf="@id/button_division"
        tools:text="MEMORY" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_present"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/text_size_output"
        android:gravity="bottom|end"
        android:textColor="@color/special"
        android:textSize="@dimen/text_size_output"
        app:layout_constraintBottom_toTopOf="@id/button_percent"
        app:layout_constraintEnd_toEndOf="@id/button_division"
        tools:text="PRESENT" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_division"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:backgroundTint="@color/colorless"
        android:text="@string/division"
        android:textColor="@color/special"
        android:textSize="@dimen/symbol_size"
        app:cornerRadius="@dimen/button_radius"
        app:layout_constraintBottom_toTopOf="@+id/button_multiplication"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_delete" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_percent"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:backgroundTint="@color/colorless"
        android:text="@string/perсent"
        android:textColor="@color/special"
        android:textSize="@dimen/symbol_size"
        app:cornerRadius="@dimen/button_radius"
        app:layout_constraintBottom_toTopOf="@+id/button_8"
        app:layout_constraintEnd_toStartOf="@+id/button_delete"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_clear" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_clear"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:backgroundTint="@color/colorless"
        android:text="@string/clear"
        android:textColor="@color/special"
        android:textSize="@dimen/symbol_size"
        app:cornerRadius="@dimen/button_radius"
        app:layout_constraintBottom_toTopOf="@+id/button_7"
        app:layout_constraintEnd_toStartOf="@+id/button_percent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_delete"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:backgroundTint="@color/colorless"
        android:text="@string/delete"
        android:textColor="@color/special"
        android:textSize="@dimen/symbol_size"
        app:cornerRadius="@dimen/button_radius"
        app:layout_constraintBottom_toTopOf="@+id/button_9"
        app:layout_constraintEnd_toStartOf="@+id/button_division"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_percent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_7"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:backgroundTint="@color/colorless"
        android:text="@string/_7"
        android:textColor="@color/special"
        android:textSize="@dimen/symbol_size"
        app:cornerRadius="@dimen/button_radius"
        app:layout_constraintBottom_toTopOf="@+id/button_4"
        app:layout_constraintEnd_toStartOf="@+id/button_8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_8"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:backgroundTint="@color/colorless"
        android:text="@string/_8"
        android:textColor="@color/special"
        android:textSize="@dimen/symbol_size"
        app:cornerRadius="@dimen/button_radius"
        app:layout_constraintBottom_toTopOf="@+id/button_5"
        app:layout_constraintEnd_toStartOf="@+id/button_9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_9"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:backgroundTint="@color/colorless"
        android:text="@string/_9"
        android:textColor="@color/special"
        android:textSize="@dimen/symbol_size"
        app:cornerRadius="@dimen/button_radius"
        app:layout_constraintBottom_toTopOf="@+id/button_6"
        app:layout_constraintEnd_toStartOf="@+id/button_multiplication"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_multiplication"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:backgroundTint="@color/colorless"
        android:text="@string/multiplication"
        android:textColor="@color/special"
        android:textSize="@dimen/symbol_size"
        app:cornerRadius="@dimen/button_radius"
        app:layout_constraintBottom_toTopOf="@+id/button_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_4"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:backgroundTint="@color/colorless"
        android:text="@string/_4"
        android:textColor="@color/special"
        android:textSize="@dimen/symbol_size"
        app:cornerRadius="@dimen/button_radius"
        app:layout_constraintBottom_toTopOf="@+id/button_1"
        app:layout_constraintEnd_toStartOf="@+id/button_5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_5"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:backgroundTint="@color/colorless"
        android:text="@string/_5"
        android:textColor="@color/special"
        android:textSize="@dimen/symbol_size"
        app:cornerRadius="@dimen/button_radius"
        app:layout_constraintBottom_toTopOf="@+id/button_2"
        app:layout_constraintEnd_toStartOf="@+id/button_6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_6"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:backgroundTint="@color/colorless"
        android:text="@string/_6"
        android:textColor="@color/special"
        android:textSize="@dimen/symbol_size"
        app:cornerRadius="@dimen/button_radius"
        app:layout_constraintBottom_toTopOf="@+id/button_3"
        app:layout_constraintEnd_toStartOf="@+id/button_minus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_minus"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:backgroundTint="@color/colorless"
        android:text="@string/minus"
        android:textColor="@color/special"
        android:textSize="@dimen/symbol_size"
        app:cornerRadius="@dimen/button_radius"
        app:layout_constraintBottom_toTopOf="@+id/button_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_6" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_1"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:backgroundTint="@color/colorless"
        android:text="@string/_1"
        android:textColor="@color/special"
        android:textSize="@dimen/symbol_size"
        app:cornerRadius="@dimen/button_radius"
        app:layout_constraintBottom_toTopOf="@+id/button_0"
        app:layout_constraintEnd_toStartOf="@+id/button_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_2"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:backgroundTint="@color/colorless"
        android:text="@string/_2"
        android:textColor="@color/special"
        android:textSize="@dimen/symbol_size"
        app:cornerRadius="@dimen/button_radius"
        app:layout_constraintBottom_toBottomOf="@+id/button_3"
        app:layout_constraintEnd_toStartOf="@+id/button_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_1" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_3"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:backgroundTint="@color/colorless"
        android:text="@string/_3"
        android:textColor="@color/special"
        android:textSize="@dimen/symbol_size"
        app:cornerRadius="@dimen/button_radius"
        app:layout_constraintBottom_toTopOf="@+id/button_point"
        app:layout_constraintEnd_toStartOf="@+id/button_plus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_2" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_plus"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:backgroundTint="@color/colorless"
        android:text="@string/plus"
        android:textColor="@color/special"
        android:textSize="@dimen/symbol_size"
        app:cornerRadius="@dimen/button_radius"
        app:layout_constraintBottom_toTopOf="@+id/button_equal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_3" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_0"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:backgroundTint="@color/colorless"
        android:text="@string/_0"
        android:textColor="@color/special"
        android:textSize="@dimen/symbol_size"
        app:cornerRadius="@dimen/button_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/button_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/button_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_point"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:backgroundTint="@color/colorless"
        android:text="@string/point"
        android:textColor="@color/special"
        android:textSize="@dimen/symbol_size"
        app:cornerRadius="@dimen/button_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/button_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/button_3" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_equal"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:backgroundTint="@color/colorless"
        android:text="@string/equal"
        android:textColor="@color/special"
        android:textSize="@dimen/symbol_size"
        app:cornerRadius="@dimen/button_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/button_plus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/button_plus" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/button_settings"
        android:layout_width="@dimen/button_width_land"
        android:layout_height="@dimen/button_height_land"
        android:background="@color/colorless_full"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_sort_by_size" />


</androidx.constraintlayout.widget.ConstraintLayout>